Start implementing expression profiles PoC
Expression profiles rely upon the reliable and precise determination
of the origin of individual expressions - i.e., in which part of which
object they were defined. This allows editing of such places by persons
that are less experienced or trustworthy than e.g. the root; in exchange
for using more restricting profiles for execution of such expressions.

However, this problem is harder than one could expect. The complexity
stems from various ways in which parts of midPoint configuration are
mixed together - links (inheritance, reuse) between resources, object
type definitions, object templates, policy rules, correlators, and many
more. In the most complex cases (arbitrary object merging) we will have
to use the provenance metadata.

This commit provides first steps towards the origin determination and
propagation throughout the system. The basic concepts are:

1. ConfigurationItemOrigin describing the origin itself.
2. ConfigurationItem that couples the config data with the origin.
3. Typed "configuration items" that facilitate the work with all kinds
of configuration data, along with precise and understandable error
reporting. Highly experimental for now, though.

Other minor changes:
- Fixed forgotten InboundMappingUseType#DATA_TRANSFER -> SYNCHRONIZATION
- Adapted code to changes in ItemDeltaItem/ObjectDeltaObject
(prism 45570df5a1259d94950f572a08da1ae1eb6e8e00)

Work in progress.